<resources>
    <string name="app_name">Cash Here</string>
    <string name="xyz_cafe">XYZ CAFE</string>
    <string name="simpan">SIMPAN</string>
    <string name="cafe_ku">Cafeku</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="item">Item</string>
    <string name="bayar">Bayar</string>
    <string name="background">background</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="btnback">btnback</string>
    <string name="update">Update</string>
    <string name="_48192">48192</string>
    <string name="ex_19000">ex : 19000</string>
    <string name="harga">Harga</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="kode">Kode</string>
    <string name="menu_baru">Menu Baru</string>
    <string name="nama">Nama</string>
    <string name="coffe_latte">Coffe Latte</string>
    <string name="tambah">Tambah</string>
    <string name="hapus">Hapus</string>
    <string name="ubah">Ubah</string>

    <string-array name="metode_bayar">
        <item>Cash</item>
        <item>Dana</item>
        <item>OVO</item>
        <item>Gopay</item>
        <item>Shopeepay</item>
        <item>Debit</item>
    </string-array>
</resources>