<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="Update Menu"
        android:layout_gravity="center"
        android:textColor="@color/hijau_utama"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/kode"
        android:textColor="@color/hijau_utama"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etKodeUpdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#444948"
        android:focusable="false"
        android:layout_marginTop="2dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/russo_one"
        android:textSize="14sp"
        android:text="@string/_48192"
        android:background="@drawable/bg_et_addname"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/nama"
        android:textColor="@color/hijau_utama"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNamaUpdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/hijau_utama"
        android:layout_marginTop="2dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/russo_one"
        android:textSize="14sp"
        android:hint="@string/nasi_goreng"
        android:background="@drawable/bg_et_addname"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/harga"
        android:textColor="@color/hijau_utama"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etHargaUpdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:textColor="@color/hijau_utama"
        android:layout_marginTop="2dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/russo_one"
        android:textSize="14sp"
        android:hint="@string/ex_19000"
        android:background="@drawable/bg_et_addname"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llUpdateDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_addname"
            android:text="@string/hapus"
            android:textColor="@color/white_smooth"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_btn_addname"
            android:text="@string/ubah"
            android:textColor="@color/white_smooth"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="@+id/btnDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>