<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrinkActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white_smooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/btnBackDrink"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:clickable="true"
            android:contentDescription="@string/btnback"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@id/btnBackDrink"
            android:fontFamily="@font/russo_one"
            android:text="@string/drink"
            android:textColor="@color/hijau_utama"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnAddItemDrink"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_item" />

        <ImageView
            android:id="@+id/btnCancelAddItemDrink"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:src="@drawable/ic_outline_cancel_24" />

    </RelativeLayout>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/svDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hijau_utama"
        android:theme="@style/ThemeOverlay.SearchView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:searchIcon="@drawable/ic_search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Drink"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svDrink" />

    <LinearLayout
        android:id="@+id/llAddItemDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:text="@string/menu_baru"
            android:layout_gravity="center"
            android:textColor="@color/white_smooth"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:text="@string/kode"
            android:textColor="@color/white_smooth"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etKodeDrink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/hijau_utama"
            android:focusable="false"
            android:layout_marginTop="2dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/russo_one"
            android:textSize="14sp"
            android:text="@string/_48192"
            android:background="@drawable/bg_et_addname"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/russo_one"
            android:text="@string/nama"
            android:textColor="@color/white_smooth"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNamaDrink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/hijau_utama"
            android:layout_marginTop="2dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/russo_one"
            android:textSize="14sp"
            android:hint="@string/coffe_latte"
            android:background="@drawable/bg_et_addname"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/russo_one"
            android:text="@string/harga"
            android:textColor="@color/white_smooth"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etHargaDrink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textColor="@color/hijau_utama"
            android:layout_marginTop="2dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/russo_one"
            android:textSize="14sp"
            android:hint="@string/ex_19000"
            android:background="@drawable/bg_et_addname"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSimpanDrink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white_smooth"
            android:layout_marginTop="20dp"
            android:text="@string/simpan"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_addname"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>